compiler/testData/diagnostics/tests/resolve/skippedPropertyWithImplicitTypeWhenResolvingInvokeWithExtensionReceiver.diag.txt
/ChangedDiagnosticsOnRedCode.kt:59:12: error: unresolved reference: p4
val p4 = 1.p4
           ^^

